<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="T_CRYO_IOLINK_SENSOR_STATUS" Id="{5c204dc4-80fe-4cec-9aca-9163c3d169d3}">
    <Declaration><![CDATA[TYPE T_CRYO_IOLINK_SENSOR_STATUS :
STRUCT
	bInRange:			BOOL;
	bUnderrange:		BOOL;
	bOverrange:			BOOL;
	bError:				BOOL;
	bValid:				BOOL;
	
	lrValue:			LREAL;		// Reading in UU
	
	sUnits:				STRING(16);
	sType:				STRING(32);	// Sensor type, e.g. 'Flow' or 'Temperature'.
	sStatus:			STRING	:= 'OK';

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>